--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1"
   },
-  "homepage": ""
+  "homepage": "https://sergl82.github.io/ra-router-crud/"
 }
